--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <!-- Background Music -->
   <audio autoplay loop>
-    <source src="music.mp3" type="audio/mpeg">
+    <source src="music.mp3.mp3" type="audio/mpeg">
   </audio>
 
   <div class="container">
@@ -84,9 +84,9 @@
 
     <!-- Photo Slideshow -->
     <div class="slideshow">
-      <img src="pic1.jpg" class="slide active" alt="Us 1">
-      <img src="pic2.jpg" class="slide" alt="Us 2">
-      <img src="pic3.jpg" class="slide" alt="Us 3">
+      <img src="pic1.jpg.jpeg" class="slide active" alt="Us 1">
+      <img src="pic2.jpg.jpeg" class="slide" alt="Us 2">
+      <img src="pic3.jpg.jpeg" class="slide" alt="Us 3">
     </div>
 
     <div id="typing"></div>
