--- a/index.html
+++ b/index.html
@@ -13,49 +13,51 @@
 
     body {
       margin: 0;
-      height: 100vh;
+      padding: 0;
       background: linear-gradient(135deg, #ff758c, #ff7eb3);
       display: flex;
       justify-content: center;
       align-items: center;
-      overflow: hidden;
+      min-height: 100vh;
     }
 
     .container {
-      background: rgba(255, 255, 255, 0.95);
-      padding: 35px 30px;
+      background: #fff;
+      padding: 30px 25px;
       border-radius: 25px;
       width: 90%;
       max-width: 420px;
       text-align: center;
       box-shadow: 0 20px 40px rgba(0,0,0,0.2);
-      animation: popIn 1s ease;
       position: relative;
-      z-index: 2;
-    }
-
-    @keyframes popIn {
-      from { transform: scale(0.8); opacity: 0; }
-      to { transform: scale(1); opacity: 1; }
+      overflow: hidden;
     }
 
     h1 { color: #ff3366; margin-bottom: 10px; font-size: 26px; }
     h2 { color: #444; font-weight: 400; font-size: 18px; margin-bottom: 20px; }
 
-    /* Slideshow */
-    .slideshow { position: relative; width: 100%; height: 200px; margin-bottom: 20px; border-radius: 20px; overflow: hidden; }
-    .slideshow .slide { position: absolute; width: 100%; height: 100%; object-fit: cover; opacity: 0; transition: opacity 1s ease-in-out; }
-    .slideshow .slide.active { opacity: 1; }
+    /* Full photo */
+    .profile-pic {
+      width: 200px; /* adjust size */
+      height: auto;
+      border-radius: 20px;
+      margin-bottom: 20px;
+    }
 
-    #typing { min-height: 120px; font-size: 15px; color: #555; margin-bottom: 25px; }
+    #typing {
+      min-height: 120px;
+      font-size: 15px;
+      color: #555;
+      margin-bottom: 25px;
+    }
 
-    .buttons { display: flex; justify-content: center; gap: 15px; }
+    .buttons { display: flex; justify-content: center; gap: 15px; margin-bottom: 10px; }
     button { padding: 12px 24px; border-radius: 30px; border: none; font-size: 15px; cursor: pointer; transition: all 0.3s ease; }
     #yesBtn { background: #ff3366; color: white; box-shadow: 0 8px 20px rgba(255, 51, 102, 0.4); }
     #yesBtn:hover { transform: scale(1.08); }
     #noBtn { background: #f1f1f1; color: #333; position: relative; }
 
-    .footer { margin-top: 18px; font-size: 12px; color: #999; }
+    .footer { font-size: 12px; color: #999; }
 
     /* floating hearts */
     .heart { position: absolute; font-size: 18px; animation: float 6s linear infinite; opacity: 0.8; }
@@ -66,28 +68,22 @@
     .popup-card { background: white; padding: 30px; border-radius: 25px; text-align: center; width: 85%; max-width: 380px; animation: popIn 0.6s ease; }
     .popup-card h2 { color: #ff3366; }
     .popup-card p { font-size: 14px; color: #555; margin: 15px 0 25px; }
-    .popup-card button { background: #ff3366; color: white; }
-
-    audio { display: none; }
+    .popup-card button { background: #ff3366; color: white; padding: 10px 20px; border-radius: 25px; border: none; cursor: pointer; }
   </style>
 </head>
 <body>
 
   <!-- Background Music -->
-  <audio autoplay loop>
-    <source src="music.mp3.mp3" type="audio/mpeg">
+  <audio id="bgMusic" loop>
+    <source src="music.mp3" type="audio/mpeg">
   </audio>
 
   <div class="container">
     <h1>❤️ Mrs. Sneha Saha ❤️</h1>
     <h2>Will you be my Valentine?</h2>
 
-    <!-- Photo Slideshow -->
-    <div class="slideshow">
-      <img src="pic1.jpg.jpeg" class="slide active" alt="Us 1">
-      <img src="pic2.jpg.jpeg" class="slide" alt="Us 2">
-      <img src="pic3.jpg.jpeg" class="slide" alt="Us 3">
-    </div>
+    <!-- Full profile photo -->
+    <img src="8140cef4-31ef-4b8a-8756-2a5c25d3ebca.png" alt="Sneha" class="profile-pic">
 
     <div id="typing"></div>
 
@@ -109,7 +105,7 @@
   </div>
 
   <script>
-    /* Typing text */
+    // Typing text
     const message = "BUBU, from the moment you entered my life😭, everything changed😤. Your smile brightens my darkest days, your voice calms my chaos🥺, and your presence feels like home. I may not be perfect, but my love for you is real, pure, and endless🙄😽.";
     let i = 0;
     function typeText() {
@@ -121,24 +117,42 @@
     }
     typeText();
 
-    /* No button dodge */
+    // No button dodge
     const noBtn = document.getElementById('noBtn');
-    noBtn.addEventListener('mouseover', () => {
-      const x = Math.random() * 200 - 100;
-      const y = Math.random() * 150 - 75;
-      noBtn.style.transform = `translate(${x}px, ${y}px)`;
-    });
+    const container = document.querySelector('.container');
 
-    /* Yes button */
-    document.getElementById('yesBtn').addEventListener('click', () => {
-      document.getElementById('popup').style.display = 'flex';
+    function moveNoBtn() {
+      const containerRect = container.getBoundingClientRect();
+      const btnRect = noBtn.getBoundingClientRect();
+
+      const maxX = containerRect.width - btnRect.width;
+      const maxY = containerRect.height - btnRect.height;
+
+      const randomX = Math.random() * maxX;
+      const randomY = Math.random() * maxY;
+
+      noBtn.style.transition = 'transform 0.3s ease';
+      noBtn.style.transform = `translate(${randomX}px, ${randomY}px)`;
+    }
+
+    noBtn.addEventListener('mouseenter', moveNoBtn);
+    noBtn.addEventListener('touchstart', (e) => { e.preventDefault(); moveNoBtn(); });
+
+    // Yes button popup & music
+    const yesBtn = document.getElementById('yesBtn');
+    const popup = document.getElementById('popup');
+    const bgMusic = document.getElementById('bgMusic');
+
+    yesBtn.addEventListener('click', () => {
+      popup.style.display = 'flex';
+      bgMusic.play().catch(() => console.log("Interaction needed to play music"));
     });
 
     function closePopup() {
-      document.getElementById('popup').style.display = 'none';
+      popup.style.display = 'none';
     }
 
-    /* Floating hearts */
+    // Floating hearts
     function createHeart() {
       const heart = document.createElement('div');
       heart.className = 'heart';
@@ -150,14 +164,8 @@
     }
     setInterval(createHeart, 300);
 
-    /* Slideshow */
-    const slides = document.querySelectorAll('.slide');
-    let currentSlide = 0;
-    setInterval(() => {
-      slides[currentSlide].classList.remove('active');
-      currentSlide = (currentSlide + 1) % slides.length;
-      slides[currentSlide].classList.add('active');
-    }, 3000); // change every 3 seconds
+    // Play music on first click anywhere (for autoplay restrictions)
+    document.addEventListener('click', () => { bgMusic.play().catch(() => {}); }, { once: true });
   </script>
 
 </body>
