--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sneha ❤️ Will you be my Valentine?</title>
+<title>Sneha ❤️ Valentine</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
@@ -20,11 +20,10 @@ body {
   overflow-x: hidden;
 }
 
-/* CARD */
 .container {
-  background: #fff;
-  padding: 30px 25px;
-  border-radius: 25px;
+  background: white;
+  padding: 28px 22px;
+  border-radius: 30px;
   width: 90%;
   max-width: 420px;
   text-align: center;
@@ -32,30 +31,30 @@ body {
   position: relative;
 }
 
-h1 { color: #ff3366; font-size: 26px; margin-bottom: 5px; }
+h1 { color: #ff3366; font-size: 26px; margin-bottom: 6px; }
 h2 { color: #444; font-size: 18px; font-weight: 400; margin-bottom: 20px; }
 
-/* IMAGE – FULL NO CROP */
+/* SLIDER IMAGE */
 .profile-pic {
-  max-width: 100%;
+  width: 100%;
   height: auto;
   border-radius: 20px;
   margin-bottom: 20px;
+  transition: opacity 0.5s ease;
 }
 
-/* TEXT */
 #typing {
-  min-height: 120px;
+  min-height: 110px;
   font-size: 15px;
   color: #555;
-  margin-bottom: 25px;
+  margin-bottom: 22px;
 }
 
-/* BUTTONS */
 .buttons {
   display: flex;
   justify-content: center;
-  gap: 15px;
+  gap: 20px;
+  position: relative;
 }
 
 button {
@@ -72,15 +71,15 @@ button {
   color: #fff;
   box-shadow: 0 8px 20px rgba(255,51,102,0.4);
 }
+
 #yesBtn:hover { transform: scale(1.1); }
 
 #noBtn {
   background: #f1f1f1;
   color: #333;
-  position: absolute;
+  position: relative; /* IMPORTANT FIX */
 }
 
-/* FOOTER */
 .footer {
   margin-top: 15px;
   font-size: 12px;
@@ -112,8 +111,8 @@ button {
 }
 
 .popup-card {
-  background: #fff;
-  padding: 30px;
+  background: white;
+  padding: 28px;
   border-radius: 25px;
   width: 85%;
   max-width: 380px;
@@ -141,7 +140,7 @@ button {
 
 <body>
 
-<!-- 🎵 MUSIC (YOUR REAL FILE NAME) -->
+<!-- MUSIC -->
 <audio id="bgMusic" loop preload="auto">
   <source src="music.mp3.mp3" type="audio/mpeg">
 </audio>
@@ -150,8 +149,8 @@ button {
   <h1>❤️ Mrs. Sneha Saha ❤️</h1>
   <h2>Will you be my Valentine?</h2>
 
-  <!-- ✅ REAL IMAGE FILE -->
-  <img src="pic1.jpg.jpeg" alt="Sneha" class="profile-pic">
+  <!-- SLIDER IMAGE -->
+  <img id="slider" src="pic1.jpg.jpeg" class="profile-pic">
 
   <div id="typing"></div>
 
@@ -163,68 +162,92 @@ button {
   <div class="footer">"Every moment with you feels like a dream come true"</div>
 </div>
 
-<!-- POPUP -->
-<div class="popup" id="popup">
+<!-- POPUPS -->
+<div class="popup" id="popupYes">
   <div class="popup-card">
     <h2>I knew it babyyyy 😭❤️</h2>
-    <p>
-      Thank you for choosing me bubuu 🥺  
-      I promise to love you, respect you and stand by you forever.  
-      You are my Valentine — today & always 💕
-    </p>
+    <p>You are my Valentine — today & always 💕</p>
     <button onclick="closePopup()">Forever Us 💞</button>
   </div>
 </div>
 
-<script>
-/* TYPE EFFECT */
-const text = "BUBU, from the moment you entered my life😭 everything changed😤. Your smile lights my darkest days, your voice calms my chaos🥺 and your presence feels like home. My love for you is pure, real and endless😽❤️";
-let i = 0;
-function typing() {
-  if (i < text.length) {
-    document.getElementById("typing").innerHTML += text.charAt(i);
-    i++;
-    setTimeout(typing, 40);
-  }
-}
-typing();
+<div class="popup" id="popupNo">
+  <div class="popup-card">
+    <h2>HOW DARE YOU REJECTING MY OFFER😾</h2>
+    <p>Its just for formality😚<br>Option NO is invalid🥰</p>
+    <button onclick="closePopup()">Okay 😭💖</button>
+  </div>
+</div>
 
-/* MUSIC STARTS ON PAGE CLICK */
+<script>
+/* TYPING */
+const text = "BUBU, from the moment you entered my life😭 everything changed😤. Your smile lights my darkest days, your voice calms my chaos🥺 and your presence feels like home😽❤️";
+let i = 0;
+(function type(){
+  if(i < text.length){
+    document.getElementById("typing").innerHTML += text.charAt(i++);
+    setTimeout(type,40);
+  }
+})();
+
+/* MUSIC ON FIRST CLICK */
 const music = document.getElementById("bgMusic");
-document.addEventListener("click", () => {
+document.addEventListener("click", ()=>{
   music.currentTime = 0;
   music.volume = 0.7;
   music.play().catch(()=>{});
-}, { once: true });
+},{ once:true });
 
-/* CRAZY NO BUTTON */
+/* IMAGE SLIDER */
+const images = ["pic1.jpg.jpeg","pic2.jpg.jpeg","pic3.jpg.jpeg"];
+let idx = 0;
+const slider = document.getElementById("slider");
+
+setInterval(()=>{
+  slider.style.opacity = 0;
+  setTimeout(()=>{
+    idx = (idx + 1) % images.length;
+    slider.src = images[idx];
+    slider.style.opacity = 1;
+  },400);
+},2500);
+
+/* NO BUTTON LOGIC */
 const noBtn = document.getElementById("noBtn");
-noBtn.addEventListener("mouseenter", () => {
-  noBtn.style.left = Math.random() * (window.innerWidth - 100) + "px";
-  noBtn.style.top = Math.random() * (window.innerHeight - 50) + "px";
+let noCount = 0;
+
+noBtn.addEventListener("click", ()=>{
+  noCount++;
+  if(noCount >= 2){
+    document.getElementById("popupNo").style.display="flex";
+  }
 });
 
-/* YES CLICK */
-const popup = document.getElementById("popup");
-document.getElementById("yesBtn").addEventListener("click", () => {
-  popup.style.display = "flex";
-  for (let i = 0; i < 80; i++) createHeart();
+noBtn.addEventListener("mouseenter", ()=>{
+  noBtn.style.transform =
+    `translate(${Math.random()*120-60}px, ${Math.random()*80-40}px)`;
+});
+
+/* YES */
+document.getElementById("yesBtn").addEventListener("click", ()=>{
+  document.getElementById("popupYes").style.display="flex";
+  for(let i=0;i<60;i++) heart();
 });
 
 /* HEARTS */
-function createHeart() {
-  const h = document.createElement("div");
-  h.className = "heart";
-  h.innerHTML = "❤️";
-  h.style.left = Math.random() * 100 + "vw";
-  h.style.fontSize = Math.random() * 20 + 12 + "px";
+function heart(){
+  const h=document.createElement("div");
+  h.className="heart";
+  h.innerHTML="❤️";
+  h.style.left=Math.random()*100+"vw";
+  h.style.fontSize=Math.random()*20+12+"px";
   document.body.appendChild(h);
-  setTimeout(() => h.remove(), 6000);
+  setTimeout(()=>h.remove(),6000);
 }
-setInterval(createHeart, 300);
+setInterval(heart,350);
 
-function closePopup() {
-  popup.style.display = "none";
+function closePopup(){
+  document.querySelectorAll(".popup").forEach(p=>p.style.display="none");
 }
 </script>
 
